--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>swagger-ranger-java-client</name>
     <version>1.0.0</version>
     <url>https://github.com/swagger-api/swagger-codegen</url>
-    <description>Swagger Java</description>
+    <description>Swagger Ranger Java</description>
     <scm>
         <connection>scm:git:git@github.com:swagger-api/swagger-codegen.git</connection>
         <developerConnection>scm:git:git@github.com:swagger-api/swagger-codegen.git</developerConnection>
